"""Create Posts Table.

Revision ID: a0540ec70f21
Revises: 8bab6766e701
Create Date: 2024-07-07 17:38:30.680249

"""  # noqa: INP001

import sqlalchemy as sa
import sqlalchemy_searchable
import sqlalchemy_utils
from alembic import op
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision = "a0540ec70f21"
down_revision = "8bab6766e701"
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "posts",
        sa.Column("post_id", sa.Integer(), autoincrement=True, nullable=False),
        sa.Column("creator_id", sa.Integer(), nullable=False),
        sa.Column("thread_id", sa.Integer(), nullable=False),
        sa.Column("title", sa.VARCHAR(length=126), nullable=False),
        sa.Column("content", sa.TEXT(), nullable=False),
        sa.Column("upvote_count", sa.Integer(), server_default="0", nullable=False),
        sa.Column("downvote_count", sa.Integer(), server_default="0", nullable=False),
        sa.Column("comment_count", sa.Integer(), server_default="0", nullable=False),
        sa.Column("save_count", sa.Integer(), server_default="0", nullable=False),
        sa.Column("report_count", sa.Integer(), server_default="0", nullable=False),
        sa.Column("is_nsfw", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column("is_spoiler", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column("is_sticky", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column("is_deleted", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column("is_removed", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column("is_locked", sa.Boolean(), server_default=sa.text("false"), nullable=False),
        sa.Column(
            "flairs", postgresql.ARRAY(sa.VARCHAR(length=16), zero_indexes=True), server_default="{}", nullable=False
        ),
        sa.Column("search_vector", sqlalchemy_utils.types.ts_vector.TSVectorType(), nullable=False),
        sa.Column("created_on", postgresql.TIMESTAMP(timezone=True), server_default=sa.text("now()"), nullable=False),
        sa.Column("updated_on", postgresql.TIMESTAMP(timezone=True), nullable=True),
        sa.CheckConstraint("title ~* '[^\\s]+'"),
        sa.CheckConstraint("array_ndims(flairs) = 1 AND array_length(flairs, 1) <= 4"),
        sa.ForeignKeyConstraint(["creator_id"], ["users.user_id"], onupdate="cascade", ondelete="restrict"),
        sa.ForeignKeyConstraint(["thread_id"], ["threads.thread_id"], onupdate="cascade", ondelete="restrict"),
        sa.PrimaryKeyConstraint("post_id"),
    )
    with op.batch_alter_table("posts", schema=None) as batch_op:
        batch_op.create_index("ix_posts_search_vector", ["search_vector"], unique=False, postgresql_using="gin")
        batch_op.create_index(batch_op.f("ix_posts_thread_id"), ["thread_id", "post_id"], unique=True)

    sqlalchemy_searchable.sync_trigger(op.get_bind(), "posts", "search_vector", ["title", "content"])

    op.create_table(
        "post_media",
        sa.Column("post_id", sa.Integer(), nullable=False),
        sa.Column("media_id", sa.Integer(), nullable=False),
        sa.ForeignKeyConstraint(["media_id"], ["media.media_id"], onupdate="cascade", ondelete="cascade"),
        sa.ForeignKeyConstraint(["post_id"], ["posts.post_id"], onupdate="cascade", ondelete="cascade"),
        sa.PrimaryKeyConstraint("post_id", "media_id"),
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("post_media")

    sqlalchemy_searchable.drop_trigger(op.get_bind(), "posts", "search_vector")

    with op.batch_alter_table("posts", schema=None) as batch_op:
        batch_op.drop_index(batch_op.f("ix_posts_thread_id"))
        batch_op.drop_index("ix_posts_search_vector", postgresql_using="gin")

    op.drop_table("posts")
    # ### end Alembic commands ###
